# oxidenet

./: Cargo.toml  example-config.toml  flake.nix  rust-toolchain.toml
src/: client.rs  command_watcher.rs  config.rs  main.rs  ping.rs  server.rs  service.rs  util.rs
